# cmake-tutorial

./: .gitignore  .projectile  CMake-Best-Practices-zh.org  CMakeLists.txt  README.md  TutorialConfig.h.in  readme.org
CMake-Best-Practices---2nd-Edition-main/chapter01/: CMakeLists.txt
CMake-Best-Practices---2nd-Edition-main/chapter02/component2/: CMakeLists.txt
CMake-Best-Practices---2nd-Edition-main/chapter02/component_interface/: CMakeLists.txt
CMake-Best-Practices---2nd-Edition-main/chapter02/driver_app/: CMakeLists.txt
CMake-Best-Practices---2nd-Edition-main/chapter04/ex07_pack_nsis_standalone/: CMakeLists.txt
CMake-Best-Practices---2nd-Edition-main/chapter06/ex01_doxdocgen/: CMakeLists.txt
CMake-Best-Practices---2nd-Edition-main/chapter06/ex02_doxplantuml/: CMakeLists.txt
CMake-Best-Practices---2nd-Edition-main/chapter13/ex02_envfile_utility/test-executable/: CMakeLists.txt
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
libA/: CMakeLists.txt  libA.cpp  libA.h
libB/: CMakeLists.txt  libB.cpp  libB.h
libC/: CMakeLists.txt  libC.h
src/: CMakeLists.txt  main.cpp
